@@ -217,7 +217,7 @@ AC_MSG_CHECKING([for unix domain sockets])
 AC_LANG_SAVE
 AC_LANG_CPLUSPLUS
 AC_TRY_COMPILE([#include <sys/types.h>
-				#include <sys/socket.h>
+                #include <sys/socket.h>
                 #include <sys/un.h>],
 [
     sockaddr_un sa;
@@ -349,7 +349,7 @@ AC_LANG_SAVE
 AC_LANG_CPLUSPLUS
 AC_MSG_CHECKING([for IPv6 socket address])
 AC_TRY_COMPILE([#include <sys/types.h>
-				#include <sys/socket.h>
+                #include <sys/socket.h>
                 #include <netinet/in.h>],
 [
     sockaddr_in6 sin6;
